==========
01/07/2009
==========

- alteracoes no cadastro de blogs

HORAS TRABALHADAS: 5h

==========
03/07/2009
==========

- alteracoes no cadastro de blogs

HORAS TRABALHADAS: 8h

==========
04/07/2009
==========

- alteracao no cadastro de feeds

HORAS TRABALHADAS: 6h

==========
06/07/2009
==========

- reader

HORAS TRABALHADAS: 3h

==========
07/07/2009
==========

- reader

HORAS TRABALHADAS: 4h

==========
08/07/2009
==========

- reader

HORAS TRABALHADAS: 5h

==========
10/07/2009
==========

- reader

HORAS TRABALHADAS: 2h

==========
12/07/2009
==========

- reader (bugfixes)
- inclusao do layout do queue

HORAS TRABALHADAS: 7h