@@ -99,27 +99,27 @@ div.queuepubbtn
     padding-top: 2px;
 }
 
-/* ARTICLE */
+/* ENTRY */
 
-div.article
+div.entry
 {
     line-height: 30px;
     padding-top: 3px;
     background-color: whitesmoke;
 }
-div.articleclosed
+div.entryclosed
 {
     border: 2px solid white;
     border-bottom: 1px solid lightgray;
 }
-div.articleopen
+div.entryopen
 {
     border: 2px solid navy;
     border-bottom: 1px solid white;
     border-collapse: collapse;
     margin-top: -2px;
 }
-div.articlebutton
+div.entrybutton
 {
     float: left;
     width: 40px;
@@ -128,7 +128,7 @@ div.articlebutton
     line-height: 40px;
     text-align: center;
 }
-div.articlehead
+div.entryhead
 {
     margin-right: 240px;
     overflow: hidden;
@@ -137,40 +137,40 @@ div.articlehead
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-div.articlesource
+div.entrysource
 {
     color: gray;
     font-size: small;
     line-height: 15px;
 }
-div.articletitle
+div.entrytitle
 {
     font-size: 14pt;
     line-height: 20px;
 }
-div.articletitle a
+div.entrytitle a
 {
     text-decoration: none;
     font-weight: bold;
 }
-div.articleinfo
+div.entryinfo
 {
     float: right;
     margin-top: -33px;
     margin-right: 50px;
 }
-div.articlelinks
+div.entrylinks
 {
     float: right;
     margin-top: -33px;
     margin-right: 15px;
 }
-a.articleview
+a.entryview
 {
     text-decoration: none;
     font-weight: bold;
 }
-div.articleclear
+div.entryclear
 {
     clear: both;
 }
