@@ -60,5 +60,6 @@ HORAS TRABALHADAS: 2h
 
 - reader (bugfixes)
 - inclusao do layout do queue
+- inclusao de listagem de itens do queue
 
-HORAS TRABALHADAS: 7h
+HORAS TRABALHADAS: 8h
